--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,8 @@
 ---
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 import HelloAlert from "../components/HelloAlert.astro"
+import '../styles/global.css';
 const {title} = Astro.props;
 ---
 <html lang="en">
@@ -11,23 +14,22 @@ const {title} = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/experience/">My Experience</a>
-            <a href="/portfolio/">Portfolio</a>
-            <a href="/contact/">Contact Me</a>
-        </nav>
         
+        <Header/>
+
         <HelloAlert>
             <h1>{title}</h1>
         </HelloAlert>
 
         <slot/>
 
-        <footer>
-            <a href="https://github.com">GitHub</a>
-            <a href="https://linkedIn.com">LinkedIn</a>
-            <a href="https://soundcloud.com/">SoundCloud</a>
-        </footer>
+        <Footer/>
+
+        <!-- Switch between the normal header navigation and a hamburger menu -->
+        <script>
+            document.querySelector('.hamburger').addEventListener('click', () => {
+              document.querySelector('.nav-links').classList.toggle('expanded');
+            });
+        </script>
 	</body>
 </html>
