Changed portfolio project file names

--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -4,8 +4,8 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 <BaseLayout title="Portfolio">
     <ul>
-        <li><a href="/portfolio/first/">First Project</a></li>
-        <li><a href="/portfolio/second/">Second Project</a></li>
-        <li><a href="/portfolio/third/">Third Project</a></li>
+        <li><a href="/portfolio/project-1/">First Project</a></li>
+        <li><a href="/portfolio/project-2/">Second Project</a></li>
+        <li><a href="/portfolio/project-3/">Third Project</a></li>
     </ul>
 </BaseLayout>
