--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import HelloAlert from "../components/HelloAlert.astro"
 import '../styles/global.css';
-const {title} = Astro.props;
+const {title: pageTitle} = Astro.props;
 ---
 <html lang="en">
 	<head>
@@ -11,14 +11,14 @@ const {title} = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
         
         <Header/>
 
         <HelloAlert>
-            <h1>{title}</h1>
+            <h1>{pageTitle}</h1>
         </HelloAlert>
 
         <slot/>
