--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -9,5 +9,6 @@ const { platform, username } = Astro.props;
     background-color: #4c1d95;
     padding: 0.5rem 1rem;
     text-decoration: none;
+    border-radius: var(--corvid-border-radius,var(100px,0));
   }
 </style>
