Styling the header

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -4,4 +4,24 @@
     <span class="line"></span>
     <span class="line"></span>
     <span class="line"></span>
-  </div>
+</div>
+
+<style>
+  /* Navigation styles*/
+  .hamburger {
+      padding-right: 20px;
+      cursor: pointer;
+  }
+    
+  .hamburger .line {
+      display: block;
+      width: 40px;
+      height: 5px;
+      margin-bottom: 10px;
+      background-color: rgb(255, 255, 255);
+  }
+    
+  .expanded {
+  display: unset;
+  }
+</style>
