--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,28 +2,27 @@
 import icon from "../assets/profile_icon.png"
 ---
 
-<div class="header">
-    <img class="profile_icon" src={icon} alt="Drawn profile picture">
-    <h1 class="myName"> Noel Sigafoos </h1>
 
-    <nav class="nav-links">
-        <a href="/">Home</a>
-        <p class="seperator">|</p>
-        <a href="/portfolio/">Portfolio</a>
-        <p class="seperator">|</p>
-        <a href="/contact/">Contact Me</a>
-    </nav>
+<div class="header flex">
+    <img class="profile_icon" src={icon} alt="Drawn profile picture">
+    
+    <div class="flex flex-col">
+        <h1 class="myName text-5xl p-4" > Noel Sigafoos </h1>
+        <nav class="nav-links">
+            <a class="p-4" href="/">Home</a>
+            <a class="p-4" href="/portfolio/">Portfolio</a>
+            <a class="p-4" href="/contact/">Contact Me</a>
+        </nav>
+    </div>
+
 </div>
 
 <style>
     .header {
         position: static;
-        display: grid;
         height: auto;
         width: 100%;
         min-height: auto;
-        grid-template-rows: repeat(2, min-content) 1fr;
-        grid-template-columns: 100%;
     }
 
     .profile_icon {
@@ -40,12 +39,26 @@ import icon from "../assets/profile_icon.png"
         vertical-align: baseline;
     }
 
-    .nav-links{
-        visibility: inherit;
-        overflow-x: visible;
+    .nav-links {
+        width: 100%;
+        top: 5rem;
+        margin: 0;
     }
 
+    .nav-links a {
 
+        text-align: center;
+        text-decoration: none;
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: rgb(255, 255, 255);
+    }
+
+    .nav-links a:hover, a:focus {
+        color: #4c1d95;
+    }
+ 
 </style>
 
 
