--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
+import ParallaxImg from "../components/ParallaxImg.astro";
 import BaseLayout from "../layouts/BaseLayout.astro"
 ---
 
 <BaseLayout title="Home">
-<p>Content goes here.</p>
+    <p>Content goes here.</p>
+    <ParallaxImg/>
 </BaseLayout>
