--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title="Portfolio">
-    <ul>
+    <ul class="flex flex-col p-2">
         <li><a href="/portfolio/project-1/">First Project</a></li>
         <li><a href="/portfolio/project-2/">Second Project</a></li>
         <li><a href="/portfolio/project-3/">Third Project</a></li>
