figuring out how to write and style the contact page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import Social from "./Social.astro";
 
 <footer>
     <Social platform="Github" username="sigafonl" />
-    <Social platform="LinkedIn" username="noel-sigafoos" />
+    <Social platform="LinkedIn" username="/in/noel-sigafoos" />
 </footer>
 
 <style>
