--- a/src/components/ParallaxImg.astro
+++ b/src/components/ParallaxImg.astro
@@ -1,13 +1,13 @@
 ---
-import bg from "../assets/bg.png";
-import bg_stars from "../assets/bg_stars.png"
-import stars from "../assets/stars.png"
-import stars2 from "../assets/stars2.png"
-import back from "../assets/back.png";
-import front_btm from "../assets/front_btm.png";
-import front_top from "../assets/front_top.png";
-import mid_btm from "../assets/mid_btm.png";
-import mid_top from "../assets/mid_top.png";
+import bg from "../assets/parallax_clouds/bg.png";
+import bg_stars from "../assets/parallax_clouds/bg_stars.png"
+import stars from "../assets/parallax_clouds/stars.png"
+import stars2 from "../assets/parallax_clouds/stars2.png"
+import back from "../assets/parallax_clouds/back.png";
+import front_btm from "../assets/parallax_clouds/front_btm.png";
+import front_top from "../assets/parallax_clouds/front_top.png";
+import mid_btm from "../assets/parallax_clouds/mid_btm.png";
+import mid_top from "../assets/parallax_clouds/mid_top.png";
 ---
 
 <div class="w-80 h-80" data-relative-input="true" data-scalar-x="5" data-scalar-y="5" id="scene">
