--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import ParallaxImg from "../components/ParallaxImg.astro";
 import BaseLayout from "../layouts/BaseLayout.astro"
 ---
 
-<BaseLayout title="Home">
+<BaseLayout>
     <p>Content goes here.</p>
     <ParallaxImg/>
 </BaseLayout>
