--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -4,8 +4,16 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 <BaseLayout title="Portfolio">
     <ul class="flex flex-col p-2">
-        <li><a href="/portfolio/project-1/">First Project</a></li>
-        <li><a href="/portfolio/project-2/">Second Project</a></li>
-        <li><a href="/portfolio/project-3/">Third Project</a></li>
+        <li class="p-1"><a href="/portfolio/project-1/">First Project</a></li>
+        <li class="p-1"><a href="/portfolio/project-2/">Second Project</a></li>
+        <li class="p-1"><a href="/portfolio/project-3/">Third Project</a></li>
     </ul>
 </BaseLayout>
+
+<style>
+    
+
+    li a:hover, a:focus {
+        color: #ad94d1;
+    }
+</style>
