--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,14 +4,14 @@ import icon from "../assets/profile_icon.png"
 
 
 <div class="header flex">
-    <img class="profile_icon" src={icon} alt="Drawn profile picture">
+    <a href="/"><img class="profile_icon m-1" src={icon} alt="Drawn profile picture" ></a>
     
     <div class="flex flex-col">
         <h1 class="myName text-5xl p-4" > Noel Sigafoos </h1>
         <nav class="nav-links">
             <a class="p-4" href="/">Home</a>
             <a class="p-4" href="/portfolio/">Portfolio</a>
-            <a class="p-4" href="/contact/">Contact Me</a>
+            <a class="p-4" href="/contact/">About/Contact</a>
         </nav>
     </div>
 
@@ -46,7 +46,6 @@ import icon from "../assets/profile_icon.png"
     }
 
     .nav-links a {
-
         text-align: center;
         text-decoration: none;
         font-size: 1.2rem;
@@ -56,7 +55,7 @@ import icon from "../assets/profile_icon.png"
     }
 
     .nav-links a:hover, a:focus {
-        color: #4c1d95;
+        color: #ad94d1;
     }
  
 </style>
