--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,7 @@ const {title: pageTitle} = Astro.props;
         <Header/>
 
         <HelloAlert>
-            <h1 class="text-lg p-3">{pageTitle}</h1>
+              <h1 class= "text-xl p-3 tracking-wide text-center">{pageTitle}</h1>
         </HelloAlert>
 
         <slot/>
