Minor Css changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,13 @@
 ---
 import Social from "./Social.astro";
+
 ---
 
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
 <footer>
-    <Social platform="Github" username="sigafonl" />
-    <Social platform="LinkedIn" username="/in/noel-sigafoos" />
+    <Social platform="Github" username="sigafonl" iconName="fa-brands fa-github" />
+    <Social platform="LinkedIn" username="/in/noel-sigafoos" iconName="fa-brands fa-linkedin" />
 </footer>
 
 <style>
