--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,9 +9,9 @@ import icon from "../assets/profile_icon.png"
     <div class="flex flex-col">
         <h1 class="myName text-5xl p-4" > Noel Sigafoos </h1>
         <nav class="nav-links">
-            <a class="p-4" href="/">Home</a>
-            <a class="p-4" href="/portfolio/">Portfolio</a>
-            <a class="p-4" href="/contact/">About/Contact</a>
+            <a class="text-2xl p-4" href="/">Home</a>
+            <a class="text-2xl p-4" href="/portfolio/">Portfolio</a>
+            <a class="text-2xl p-4" href="/contact/">About/Contact</a>
         </nav>
     </div>
 
@@ -41,21 +41,16 @@ import icon from "../assets/profile_icon.png"
 
     .nav-links {
         width: 100%;
-        top: 5rem;
         margin: 0;
     }
 
     .nav-links a {
-        text-align: center;
         text-decoration: none;
-        font-size: 1.2rem;
-        font-weight: bold;
-        text-transform: uppercase;
         color: rgb(255, 255, 255);
     }
 
     .nav-links a:hover, a:focus {
-        color: #ad94d1;
+        color: #d3b5fc;
     }
  
 </style>
