Attempt to integrate markdown for about/contact

--- a/src/components/BaseDescription.astro
+++ b/src/components/BaseDescription.astro
@@ -6,5 +6,5 @@ const classTitle = title.toLowerCase();
 
 <div class={classTitle}>
     <h2 class="text-4xl p-3 thin tracking-wide text-center"> {title} </h2>
-    <p class="tex-base p-3 tracking-wide text-center"> {description} </p>
+    <p class="text-base p-3 tracking-wide text-center"> {description} </p>
 </div>
